...
    <string name="Contact_Number">Contact Number</string>
    <string name="log_out">Log out</string>
    <string name="manage_events">Manage Events</string>
    <string name="enter_the_conclave">Enter the Conclave</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="create_account">Create Account</string>
    <string name="skip_account_creation">Skip account creation</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_attendance_menu">Current Attendance</string>
    <string name="announcements">Announcements</string>
    <string name="sign_ups">Sign Ups</string>
    <string name="geo_check_ins">Geo Check-Ins</string>
    <string name="share_qr_code">Share Promo QR code</string>
...
    <string name="signed_up_events">Signed Up Events</string>
    <string name="_1">1</string>
    <string name="users">Users</string>
    <string name="milestone">Milestone</string>
    <string name="blank_numbers">_ _ _</string>
    <string name="images">Images</string>
    <string name="browse_users">Browse Users</string>
    <string name="administration">Administration</string>
    <string name="admin_roles_description">As an Administrator, harness your control:\n\n  - Browse events, profiles, and images\n  - Remove content at will\n\nDiscover more in the top right menu.</string>
    <string name="delete_user_profile">Delete User Profile</string>
    <string name="proffile_pic_note">Edit or remove profile picture using the options on the image.</string>
    <string name="default_notification_channel_id">your_notification_channel_id</string>
    <string name="google_maps_key">AIzaSyACpWJ8UeqCMkWrP8hmVrTkoJCVSK7OiY4</string>
...
